test/fail/scope-ordering.grace
method a(c) {}

class b.new(a) {
  a(object {})
}

b.new(object {})
